--- a/.travis.yml
+++ b/.travis.yml
@@ -100,7 +100,6 @@ stages:
 
 jobs:
   include:
-
     ## Project check stage jobs ##
 
     # Run the sanity tests
@@ -113,6 +112,14 @@ jobs:
     - name: Markdown Tests
       script:
         - make test-markdown
+
+    # Run the markdown link checker
+    - name: Check Website links
+      before_script:
+        - gem install html-proofer
+        - docker run --rm -i -v "$TRAVIS_BUILD_DIR:/src" -v "$TRAVIS_BUILD_DIR/_public:/target" klakegg/hugo:0.62.2-ext-ubuntu -s website
+      script:
+        - htmlproofer _public --empty-alt-ignore --http-status-ignore 429
 
     ## Operator test stage jobs ##
 
