--- a/.travis.yml
+++ b/.travis.yml
@@ -117,6 +117,9 @@ jobs:
     # Run the markdown link checker
     - name: Markdown Tests
       before_script:
+        - echo $TRAVIS_BUILD_DIR
+        - echo $(pwd)
+        - echo $(TRAVIS_BUILD_DIR)
         - docker run --rm -i \
           -v $TRAVIS_BUILD_DIR:/src \
           -v $TRAVIS_BUILD_DIR/_public:/target \
@@ -124,7 +127,7 @@ jobs:
           -s website
         - go get -u github.com/raviqqe/liche
       script:
-        - liche -d $TRAVIS_BUILD_DIR/_public -r -c 50 $TRAVS_BUILD_DIR/_public
+        - liche -d $TRAVIS_BUILD_DIR/_public -r -c 50 $TRAVIS_BUILD_DIR/_public
 
     ## Operator test stage jobs ##
 
