quote the image

--- a/.travis.yml
+++ b/.travis.yml
@@ -123,7 +123,7 @@ jobs:
         - docker run --rm -i \
           -v ${TRAVIS_BUILD_DIR}:/src \
           -v ${TRAVIS_BUILD_DIR}/_public:/target \
-          klakegg/hugo:0.69.2-ext-ubuntu \
+          "klakegg/hugo:0.69.2-ext-ubuntu" \
           -s website
         - go get -u github.com/raviqqe/liche
       script:
