quote build string

--- a/.travis.yml
+++ b/.travis.yml
@@ -121,9 +121,9 @@ jobs:
         - echo $(pwd)
         - echo $(TRAVIS_BUILD_DIR)
         - docker run --rm -i \
-          -v ${TRAVIS_BUILD_DIR}:/src \
-          -v ${TRAVIS_BUILD_DIR}/_public:/target \
-          "klakegg/hugo:0.69.2-ext-ubuntu" \
+          -v "${TRAVIS_BUILD_DIR}":/src \
+          -v "${TRAVIS_BUILD_DIR}"/_public:/target \
+          klakegg/hugo:0.69.2-ext-ubuntu \
           -s website
         - go get -u github.com/raviqqe/liche
       script:
