--- a/.travis.yml
+++ b/.travis.yml
@@ -121,8 +121,8 @@ jobs:
         - echo $(pwd)
         - echo $(TRAVIS_BUILD_DIR)
         - docker run --rm -i \
-          -v "${TRAVIS_BUILD_DIR}":/src \
-          -v "${TRAVIS_BUILD_DIR}"/_public:/target \
+          -v "$TRAVIS_BUILD_DIR:/src" \
+          -v "$TRAVIS_BUILD_DIR}/_public:/target" \
           klakegg/hugo:0.69.2-ext-ubuntu \
           -s website
         - go get -u github.com/raviqqe/liche
