--- a/.travis.yml
+++ b/.travis.yml
@@ -99,21 +99,21 @@ stages:
     if: type != pull_request AND ( tag IS present OR branch = master OR commit_message =~ /\[travis deploy\]/ )
 
 jobs:
-  allow_failures:
-
+  include:
     ## Project check stage jobs ##
 
     # Run the sanity tests
-    # - stage: check
-    #   name: Sanity Tests
-    #   script:
-    #     - make test-sanity
+    - stage: check
+      name: Sanity Tests
+      script:
+        - make test-sanity
     #
     # # Run the markdown link checker
     # - name: Markdown Tests
     #   script:
     #     - make test-markdown
     #
+  allow_failures:
     # Run the markdown link checker
     - name: Markdown Tests
       before_script:
